Refresh for SB 2.5.3 / Java 16